--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://TyGBenjamin.github.io/Portfolio.v3.01",
-  "name": "porfolio.v3.01",
+  "homepage": "http://TyGBenjamin.github.io/Portfolio.v3.01",
+  "name": "portfolio.v3.01",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
