--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://TyGBenjamin.github.io/Portfolio.v3.01",
+  "homepage": "https://TyGBenjamin.github.io/Portfolio.v3.01",
   "name": "portfolio.v3.01",
   "version": "0.1.0",
   "private": true,
